<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.operations.climbit.EditScreen">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/linear_layout_container"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/delete_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.46"
                    android:onClick="deleteRoute"
                    android:text="@string/delete_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/picture_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/picture_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/picture_tab"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="77dp"
                    android:layout_height="58dp"
                    android:layout_weight="0.22"
                    android:contentDescription="@string/picture_tab"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/upload_pic_button"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/autotext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/name_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name_tab"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/name_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="25"
                    android:ems="10"
                    android:hint="@string/route_name"
                    android:inputType="textCapWords"
                    android:nextFocusLeft="@id/autotext"
                    android:nextFocusUp="@id/autotext" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/grade_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/grade_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_tab"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/grade_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="5"
                    android:ems="10"
                    android:hint="@string/grading_system"
                    android:inputType="textCapCharacters" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setter_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/setter_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setter_tab"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/setter_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="25"
                    android:ems="10"
                    android:hint="@string/setter_hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/start_date_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/start_date_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date_tab"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/start_date_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/date_hint"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/finish_date_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/finish_date_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/finish_date_tab"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/finish_date_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/date_hint"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/rating_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_tab"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating_bar_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/Widget.AppCompat.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/felt_like_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/felt_like_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/felt_life_tab"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/felt_like_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="5"
                    android:ems="10"
                    android:hint="@string/feel_like_hint"
                    android:inputType="textCapCharacters" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/location_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location_tab"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/location_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="25"
                    android:ems="10"
                    android:hint="@string/location_hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/submit_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:onClick="updateRouteInformation"
                    android:text="@string/update_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
