<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.operations.climbit.MainScreen">

    <LinearLayout
        android:id="@+id/autotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginBottom="0dp" />

    <EditText
        android:id="@+id/search_text_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="textCapWords"
        android:nextFocusLeft="@id/autotext"
        android:nextFocusUp="@id/autotext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="searchByField"
        android:text="@string/search_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/search_radio_group"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text_box"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioButton
            android:id="@+id/grade_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:checked="true"
            android:text="@string/grade_radio" />

        <RadioButton
            android:id="@+id/name_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:checked="false"
            android:text="@string/name_radio" />

        <RadioButton
            android:id="@+id/rating_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:text="@string/rating_radio" />

        <RadioButton
            android:id="@+id/setter_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:text="@string/setter_radio" />

    </RadioGroup>

    <Button
        android:id="@+id/add_new_route_button"
        android:layout_width="189dp"
        android:layout_height="69dp"
        android:onClick="addNewRoute"
        android:text="@string/add_route_button"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/search_radio_group"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="goToSettingsPage"
        android:text="@string/settings_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_new_route_button"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toRightOf="@+id/add_new_route_button"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_new_route_button"
        android:id="@+id/view" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_route_button"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:id="@+id/routes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_new_route_button">

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
